--- a/.github/workflows/graphiz.yml
+++ b/.github/workflows/graphiz.yml
@@ -8,5 +8,7 @@ jobs:
       run: sudo apt-get install -y graphviz plantuml
     - name: Check out repository code
       uses: actions/checkout@v3
+    - name: Permissions
+      run: sudo chmod u+x graphviz.sh
     - name: Lancement graphviz
       run: ./graphviz1.sh g1
